--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "loader.js": "ember-cli/loader.js#3.2.0",
     "qunit": "~1.17.1",
     "bootstrap": "~3.3.2",
-    "lightbox": "2.7.3"
+    "lightbox": "2.7.3",
+    "ember-simple-auth": "0.8.0"
   }
 }
