--- a/package.json
+++ b/package.json
@@ -31,10 +31,13 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-lightbox": "0.0.3",
     "ember-cli-qunit": "0.3.13",
+    "ember-cli-simple-auth": "0.8.0",
+    "ember-cli-simple-auth-torii": "0.8.0",
     "ember-cli-uglify": "^1.0.1",
     "ember-data": "1.0.0-beta.18",
     "ember-disable-proxy-controllers": "^1.0.0",
     "ember-export-application-global": "^1.0.2",
-    "liquid-fire": "0.19.5"
+    "liquid-fire": "0.19.5",
+    "torii": "^0.5.1"
   }
 }
